# ansible-convergence-lab

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  ansible.cfg  compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
containers/ansible/: Dockerfile
containers/simulator/: Dockerfile
docs/: engineering-notes.md  failure-modes.md  publishing-checklist.md  review-questions.md  runbook.md  study-guide.md
docs/adr/: 0001-windows-entrypoint-linux-runtime.md  0002-docker-default-runtime.md  0003-synthetic-simulator-backed-by-sqlite.md
group_vars/: synthetic_devices.yml
host_vars/: edge-r1.lab.example.yml
inventories/: local.yml
playbooks/: 00_precheck.yml  10_backup.yml  20_deploy.yml  30_verify.yml  40_drift_check.yml  50_rollback.yml
playbooks/includes/: build_expected_state.yml
roles/common_base/tasks/: main.yml
roles/common_base/templates/: device-config.j2
roles/interfaces/tasks/: main.yml
roles/local_users/tasks/: main.yml
roles/ssh_access/tasks/: main.yml
scripts/: common.ps1  demo.ps1  down.ps1  invoke-lab.ps1  test.ps1
src/aclab/: __init__.py  labctl.py  logging_utils.py  models.py  simulator.py  store.py
tests/: test_lab.py
